# CultRAG

./: .dockerignore  .env.example  .gitignore  Books.ipynb  BooksRAG.ipynb  Chat.ipynb  Dockerfile  Movies.ipynb  MoviesRAG.ipynb  README.md  Songs.ipynb  SongsRAG.ipynb  pyproject.toml  requirements.txt
backend/: main.py
cleaned_data/: movies_clean.csv
notebooks/: BooksRAG.ipynb  CultRAG.ipynb  MoviesRAG.ipynb  SongsRAG.ipynb
src/: CultRAG.py  chain_books.py  chain_movies.py  chain_songs.py
src/cultrag.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: paths.py
